Adding 7 blended phenopackets to test data resources.